fix: grid header blowout on firefox

--- a/webui/src/scss/_button-grid.scss
+++ b/webui/src/scss/_button-grid.scss
@@ -10,6 +10,10 @@
 
 	.button-page-input {
 		flex-grow: 1;
+
+		// Fix for firefox blowout
+		display: grid;
+		grid-template-columns: minmax(0, 1fr);
 	}
 
 	.right-buttons .btn {
